Make plugin compatible with Java 11